--- a/fast.html
+++ b/fast.html
@@ -28,7 +28,7 @@
                     </div>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="fast.html" class="active">Fast Booking</a></li>
-                    <li><a href="listing.html">Suggest</a></li>
+                    <li><a href="suggest.html">Suggest</a></li>
                 </ul>
             </div>
             <div class="header-hidden">
