--- a/house.html
+++ b/house.html
@@ -26,9 +26,9 @@
                             <a href="#">High Rate Hotels</a>
                         </div>
                     </div>
-                    <li><a href="index.html">Popular Homestays</a></li>
-                    <li><a href="fast.html" class="active">Fast Booking</a></li>
-                    <li><a href="#">Rewards</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="fast.html">Fast Booking</a></li>
+                    <li><a href="suggest.html">Suggest</a></li>
                 </ul>
             </div>
             <div class="header-hidden">
