--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </div>
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="fast.html">Fast Booking</a></li>
-                    <li><a href="listing.html">Suggest</a></li>
+                    <li><a href="suggest.html">Suggest</a></li>
                 </ul>
             </div>
             <div class="header-hidden">
@@ -135,70 +135,70 @@
                 <img src="images/image-1.png">
                 <span>
                     <h3>Near you</h3>
-                    <p>Start @ $250</p>
+                    <p>Start 50$</p>
                 </span>
             </div>
             <div>
                 <img src="images/image-2.png">
                 <span>
                     <h3>Hot</h3>
-                    <p>Start @ $250</p>
+                    <p>Start 50$</p>
                 </span>
             </div>
             <div>
                 <img src="images/image-3.png">
                 <span>
                     <h3>Flash Sale</h3>
-                    <p>Start @ $250</p>
+                    <p>Start 50$</p>
                 </span>
             </div>
             <div>
                 <img src="images/image-4.png">
                 <span>
                     <h3>Special Offer</h3>
-                    <p>Start @ $250</p>
+                    <p>Start 50$</p>
                 </span>
             </div>
             <div>
                 <img src="images/image-5.png">
                 <span>
                     <h3>New</h3>
-                    <p>Start @ $250</p>
+                    <p>Start 50$</p>
                 </span>
             </div>
             <div>
                 <img src="images/image-6.png">
                 <span>
                     <h3>Couple Hotels</h3>
-                    <p>Start @ $250</p>
+                    <p>Start 50$</p>
                 </span>
             </div>
             <div>
                 <img src="images/image-7.png">
                 <span>
                     <h3>Travel Hotels</h3>
-                    <p>Start @ $250</p>
+                    <p>Start 50$</p>
                 </span>
             </div>
             <div>
                 <img src="images/image-8.png">
                 <span>
                     <h3>Luxury</h3>
-                    <p>Start @ $250</p>
+                    <p>Start 50$</p>
                 </span>
             </div>
             <div>
                 <img src="images/image-9.png">
                 <span>
                     <h3>Hostel</h3>
-                    <p>Start @ $250</p>
+                    <p>Start 50$</p>
                 </span>
             </div>
             <div>
                 <img src="images/image-10.png">
                 <span>
                     <h3>Motel</h3>
-                    <p>Start @ $250</p>
+                    <p>Start 50$</p>
                 </span>
             </div>
         </div>
